--- a/style.css
+++ b/style.css
@@ -67,3 +67,19 @@ body{
     box-shadow: 1px 3px 10px black;
     cursor: pointer;
 }
+.pagination{
+    display: flex;
+    width: 70vh;
+    margin: 20px auto;
+    justify-content: space-between;
+    padding: 3rem;
+}
+.button{
+    padding: 0.7rem 1.2rem;
+    border: none;
+    background-color: black;
+    color: white;
+    border-radius: 1rem;
+    font-size: 1.4rem;
+    cursor: pointer;
+}
